# ai_gnn_uav

./: README.md
PX4-Data/mavlink/: mavlink_main.cpp  mavlink_main.h  mavlink_messages.cpp  mavlink_receiver.cpp  mavlink_receiver.h  module.yaml
PX4-Data/mavlink/streams/: BATTERY_STATUS_DEMO.hpp  DATA_TEST_OUTPUT.hpp  GPS_RADIO.hpp  REMOTE_ARM_DISARM.hpp  REMOTE_STATUS.hpp  TELEM_TEST.hpp  TRAJECTORY_SETPOINT_1.hpp  TRAJECTORY_SETPOINT_2.hpp  TRAJECTORY_SETPOINT_3.hpp  TRAJECTORY_SETPOINT_4.hpp
PX4-Data/msg/: CMakeLists.txt  CommMessage.msg  CurrentState.msg  DataRxTest.msg  ReferenceState.msg  RemoteStatus.msg  TrajectorySetpoint.msg  VehicleGlobalPosition.msg
PX4-Data/uxrce_dds_client/: dds_topics.yaml
RL Training Requirements/: requirements_build.txt
rl_multi_agent_passage/results/MultiPPOTrainer_2024-04-20_16-44-22/: basic-variant-state-2024-04-20_16-44-22.json  experiment_state-2024-04-20_16-44-22.json
rl_multi_agent_passage/results/MultiPPOTrainer_2024-04-20_16-44-22/MultiPPOTrainer_passage_env_e9dad_00000_0_2024-04-20_16-44-22/: events.out.tfevents.1713656662.ubuntu  params.json  params.pkl  progress.csv  result.json
rl_multi_agent_passage/src/: evaluate.py  export.py  train.py
rl_multi_agent_passage/src/rllib_multi_agent_demo/: requirements.txt
ros2_multi_agent_passage/launch/: frames.launch.py  multi_robomaster_rvo.launch.py  rvo_robomaster.launch.yaml  simulation_robomasters.launch.py
ros2_multi_agent_passage/src/Freyja/lqg_controller/: CMakeLists.txt
ros2_multi_agent_passage/src/Freyja/state_manager/: CMakeLists.txt
ros2_multi_agent_passage/src/Freyja/waypoint_manager/: CMakeLists.txt
ros2_multi_agent_passage/src/evaluation_infrastructure/evaluation_infrastructure/: agent_util.py
ros2_multi_agent_passage/src/passage_gnn_simple/launch/: decentralized_passage_robomaster.launch.py
ros2_multi_agent_passage/src/passage_gnn_simple/models/: model.pt
ros2_multi_agent_passage/src/robomaster_msgs/: CMakeLists.txt  package.xml
ros2_multi_agent_passage/src/rvo/src/: agent.hpp
ros2_multi_agent_passage/src/simple_simulator/: package.xml  setup.cfg  setup.py
ros2_multi_agent_passage/src/simple_simulator/rviz/: minicars.rviz  (+2 more)
ws_px4_gnn_uav/launch/: gnn_uav.launch.py
ws_px4_gnn_uav/src/freyja_msgs/: CMakeLists.txt  package.xml
ws_px4_gnn_uav/src/gnn_uav/: CMakeLists.txt  package.xml
ws_px4_gnn_uav/src/gnn_uav/include/: gnn_math.hpp
ws_px4_gnn_uav/src/gnn_uav/src/: offboard_control_mode_pub.cpp  trajectory_setpoint_pub.cpp
ws_px4_gnn_uav/src/gnn_uav/src/Unused/: current_state_pub.hpp  topic_generator.hpp  uav_control.cpp
ws_px4_gnn_uav/src/gnn_uav_msgs/: CMakeLists.txt  package.xml
ws_px4_gnn_uav/src/gnn_uav_msgs/msg/: ReferencePoint.msg  RelativePosition.msg
ws_px4_gnn_uav/src/px4_msgs/: ToAdd.txt
ws_px4_gnn_uav/src/tf_manager/: package.xml  setup.cfg  setup.py
(+22 files in other folders)
