<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnn_uav</name>
  <version>0.0.0</version>
  <description>Decentralized GNN for UAVs with PX4</description>
  <maintainer email="mcmullan-h3@ulster.ac.uk">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>freyja_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>gnn_uav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
